@@ -20,6 +20,7 @@ import org.gridsuite.study.server.networkmodificationtree.entities.NodeEntity;
 import org.gridsuite.study.server.notification.NotificationService;
 import org.gridsuite.study.server.utils.MatcherReportLog;
 import org.gridsuite.study.server.utils.TestUtils;
+import org.gridsuite.study.server.utils.wiremock.WireMockUtilsCriteria;
 import org.junit.jupiter.api.Test;
 import org.springframework.data.util.Pair;
 import org.springframework.http.HttpHeaders;
@@ -656,6 +657,8 @@ class NodeControllerTest extends StudyTestBase {
 
     @Test
     void testDuplicateSubtree() throws Exception {
+        wireMockStubs.stubGetAllReferencesDataFromGroup();
+
         String userId = "userId";
         UUID study1Uuid = createStudyWithStubs(userId, CASE_UUID);
         UUID firstRootNetworkUuid = studyTestUtils.getOneRootNetworkUuid(study1Uuid);
@@ -743,7 +746,9 @@ class NodeControllerTest extends StudyTestBase {
         assertEquals(0, allNodes.stream().filter(nodeEntity -> nodeEntity.getParentNode() != null && nodeEntity.getParentNode().getIdNode().equals(node4.getId())).count());
 
         // duplicate the node1 after node4
-        List<UUID> allNodesBeforeDuplication = networkModificationTreeService.getAllNodes(study1Uuid).stream().map(NodeEntity::getIdNode).collect(Collectors.toList());
+        List<UUID> allNodesUuidsBeforeDuplication = networkModificationTreeService.getAllNodes(study1Uuid)
+                .stream().map(NodeEntity::getIdNode)
+                .toList();
         UUID stubDuplicateUuid = wireMockStubs.stubDuplicateModificationGroup();
 
         mockMvc.perform(post(STUDIES_URL +
@@ -753,8 +758,13 @@ class NodeControllerTest extends StudyTestBase {
             .andExpect(status().isOk());
 
         List<UUID> nodesAfterDuplication = networkModificationTreeService.getAllNodes(study1Uuid).stream().map(NodeEntity::getIdNode).collect(Collectors.toList());
-        nodesAfterDuplication.removeAll(allNodesBeforeDuplication);
+        nodesAfterDuplication.removeAll(allNodesUuidsBeforeDuplication);
         assertEquals(3, nodesAfterDuplication.size());
+
+        //Check references have been collected on each newly created modification group, to be re-created on the duplicated nodes
+        nodesAfterDuplication.forEach(
+                nodeUuid -> WireMockUtilsCriteria.verifyGetRequest(wireMockServer, "/v1/groups/" + networkModificationTreeService.getModificationGroupUuid(nodeUuid) + "/references", Map.of(), 1)
+        );
 
         checkSubtreeCreatedMessageSent(study1Uuid, nodesAfterDuplication.get(0), node4.getId());
         checkElementUpdatedMessageSent(study1Uuid, userId);
